hphp/test/zend/good/Zend/tests/gc_025.php
<?php
$a = array(array());
$a[0][0] =& $a[0];
unset($a);
echo "ok\n"
?>